# PCL-viewer-for-Kinect-2.0

./: CMakeLists.txt  README.md  WRITE.CPP  main.CPP
kinect/: CMakeLists.txt
kinect/kinect_include/: AFEM_kinect_grabber.h
kinect/kinect_source/: AFEM_kinect_grabber.cpp
